# microblog

./: .env_copy  .gitignore  LICENSE  Makefile  README.md  config.py  main.py  microblog.py  pyproject.toml  ruff.toml
app/: __init__.py  config.py  email_logging.py  errors.py  extensions.py  forms.py  i18n.py  logging_config.py  models.py  routes.py
app/logging/: __init__.py  console_logging.py  file_logging.py
app/models/: __init__.py  mixins.py  post.py  user.py
app/templates/: 404.html  500.html  _post.html  base.html  bootstrap_wtf.html  index.html  login.html  posts_index.html  user.html
app/templates/admin/: posts.html  users.html
app/templates/email/: reset_password.html  reset_password.txt
app/templates/pages/: edit_profile.html  index.html  login.html  register.html  reset_password.html  reset_password_request.html  user.html
app/templates/partials/: _post.html
app/translations/ru/LC_MESSAGES/: messages.po
app/utils/: email.py
docs/: db.metadata  email_logging.md
instance/: README.md
migrations/versions/: 04b9451a93fd_new_fields_about_me_last_seen_in_user_.py  0dc18da4dd4e_add_junction_table_followers.py  10e2f5bbea06_add_timestamp_to_users.py  1c30b9f88e7f_add_posts_table.py  28f8d92e5453_make_last_seen_timezone_aware.py  2c7a48a758c9_rename_user_table_to_users.py  7c8c85a6924b_users_table.py  7daa06aa2a92_.py  c30f35eb19a5_posts_table.py  f95fd55d4d9e_users_table.py
notes/: db.metadata  init_db.sql  logging_emoji.md  notes.md  queries.sql  sql_alchemy_query_examples.md
tests/: conftest.py  test_routes.py
tests/models/: test_user.py
