[project]
name = "microblog"
version = "0.1.0"
description = "Microblog: training flask project, based on Miguel Grinberg's course"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "ruff>=0.14.2",
]

[tool.djlint]
profile = "jinja"
indent = 2
extension = ["html", "jinja", "jinja2"]
ignore = ["venv", "node_modules", "migrations"]
use_gitignore = true
max_line_length = 120
format_css = true
format_js = true
ignore_codes = ["H031", "H006"]
preserve_blank_lines = false
